# norman-says

./: README.md
backend/: analysis.ipynb  main.py  pyproject.toml  requirements-full.txt  requirements.txt  svm_clickbait_clf.joblib
backend/model/: analysis.ipynb  svm_clickbait_clf.joblib  svm_clickbait_clf.sav
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/components/: Navbar.tsx  Prediction.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
