[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yahya <chahineyahya@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
numpy = "^1.23.5"
joblib = "^1.2.0"
matplotlib = "^3.6.2"
ipykernel = "^6.18.0"
seaborn = "^0.12.1"
scikit-learn = "1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
